<resources>
    <string name="app_name">Ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    api-->
    <string name="facebook_app_id">667026600567309</string>
    <string name="fb_login_protocol_scheme">fb667026600567309</string>

    <!-- layout-->
    <string name="categories">Categories</string>
    <string name="recent_products">Recent</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="upload">Upload</string>
    <string name="price_prefix">$ </string>
    <string name="sign_out">Sign Out</string>
    <string name="email">Email</string>
    <string name="profile_pic_desc">Profile pic shown at the top of the page.</string>
    <string name="product_ver_list_img_desc">Product image shown at the left of each vertical list item</string>
    <string name="product_hor_list_img_desc">Product image shown at the top of each horizontal list item</string>
    <string name="cart_list_img">Product image shown at left of each cart list item</string>
    <string name="cart_list_del_desc">red icon on right of each cart item to delete order</string>

    <!--    channel-->
    <string name="trans_channel_name">Transactions</string>
    <string name="trans_channel_id">Ch_01</string>
    <string name="trans_channel_desc">This channel is about all the e-commerce transactions</string>
</resources>