<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/cart_list_img"
            android:id="@+id/oImage"
            android:layout_width="100dp"
            android:layout_height="70dp"
            tools:srcCompat="@tools:sample/avatars" />
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/oTitle"
            android:layout_marginHorizontal="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <ImageButton
            android:contentDescription="@string/cart_list_del_desc"
            android:padding="8dp"
            android:id="@+id/delOrderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@android:color/transparent"
            android:tint="@android:color/holo_red_dark"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>